# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LTLIBRARIES = libcommands.la
libcommands_la_SOURCES = CMD_alias.cpp CMD_alias.h \
                         CMD_bestfit.cpp CMD_bestfit.h \
                         CMD_bin2d.cpp CMD_bin2d.h \
                         CMD_bin.cpp CMD_bin.h \
                         CMD_clear.cpp CMD_clear.h \
                         CMD_contour.cpp CMD_contour.h \
                         CMD_dealias.cpp CMD_dealias.h \
                         CMD_defaults.cpp CMD_defaults.h \
                         CMD_define.cpp CMD_define.h \
                         CMD_density.cpp CMD_density.h \
                         CMD_destroy.cpp CMD_destroy.h \
                         CMD_display.cpp CMD_display.h \
                         CMD_do.cpp CMD_do.h \
			 CMD_ellipse.cpp CMD_ellipse.h \
                         CMD_enddo.cpp CMD_enddo.h \
                         CMD_endif.cpp CMD_endif.h \
                         CMD_evaluateExpression.cpp CMD_evaluateExpression.h \
                         CMD_execute.cpp CMD_execute.h \
                         CMD_figure.cpp CMD_figure.h \
                         CMD_filter.cpp CMD_filter.h \
                         CMD_fit.cpp CMD_fit.h \
                         CMD_form.cpp CMD_form.h \
                         CMD_generate.cpp CMD_generate.h \
                         CMD_get.cpp CMD_get.h \
                         CMD_goto.cpp CMD_goto.h \
                         CMD_graph.cpp CMD_graph.h \
                         CMD_grid.cpp CMD_grid.h \
                         CMD_hardcopy.cpp CMD_hardcopy.h \
                         CMD_help.cpp CMD_help.h \
                         CMD_if.cpp CMD_if.h \
                         CMD_inquire.cpp CMD_inquire.h \
                         CMD_list.cpp CMD_list.h \
                         CMD_matrix.cpp CMD_matrix.h \
			 CMD_minuit.cpp CMD_minuit.h \
                         CMD_page.cpp CMD_page.h \
                         CMD_pause.cpp CMD_pause.h \
                         CMD_polygon.cpp CMD_polygon.h \
                         CMD_quit.cpp CMD_quit.h \
                         CMD_read.cpp CMD_read.h \
                         CMD_rebin.cpp CMD_rebin.h \
                         CMD_replot.cpp CMD_replot.h \
                         CMD_restore.cpp CMD_restore.h \
                         CMD_return.cpp CMD_return.h \
                         CMD_save.cpp CMD_save.h \
                         CMD_scalar.cpp CMD_scalar.h \
                         CMD_scales.cpp CMD_scales.h \
                         CMD_set.cpp CMD_set.h \
                         CMD_show.cpp CMD_show.h \
                         CMD_sort.cpp CMD_sort.h \
                         CMD_stack.cpp CMD_stack.h \
                         CMD_statistics.cpp CMD_statistics.h \
                         CMD_text.cpp CMD_text.h \
                         CMD_vector.cpp CMD_vector.h \
                         CMD_window.cpp CMD_window.h \
                         CMD_world.cpp CMD_world.h \
                         CMD_write.cpp CMD_write.h \
                         CMD_zerolines.cpp CMD_zerolines.h \
                         Command.cpp Command.h \
                         CommandTable.cpp CommandTable.h \
			 Extrema_fcn.cpp Extrema_fcn.h \
                         ECommandError.h
