# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LTLIBRARIES = libfunctions.la
libfunctions_la_SOURCES = \
	  FCN_abs.cpp FCN_abs.h \
	  FCN_acos.cpp FCN_acos.h \
	  FCN_acosd.cpp FCN_acosd.h \
	  FCN_acosh.cpp FCN_acosh.h \
	  FCN_acot.cpp FCN_acot.h \
	  FCN_acotd.cpp FCN_acotd.h \
	  FCN_acoth.cpp FCN_acoth.h \
	  FCN_acsc.cpp FCN_acsc.h \
	  FCN_acscd.cpp FCN_acscd.h \
	  FCN_acsch.cpp FCN_acsch.h \
	  FCN_adev.cpp FCN_adev.h \
	  FCN_aerfc.cpp FCN_aerfc.h \
	  FCN_aerf.cpp FCN_aerf.h \
	  FCN_agauss.cpp FCN_agauss.h \
	  FCN_airy.cpp FCN_airy.h \
	  FCN_area.cpp FCN_area.h \
	  FCN_asec.cpp FCN_asec.h \
	  FCN_asecd.cpp FCN_asecd.h \
	  FCN_asech.cpp FCN_asech.h \
	  FCN_asin.cpp FCN_asin.h \
	  FCN_asind.cpp FCN_asind.h \
	  FCN_asinh.cpp FCN_asinh.h \
	  FCN_atan2.cpp FCN_atan2.h \
	  FCN_atan2d.cpp FCN_atan2d.h \
	  FCN_atan.cpp FCN_atan.h \
	  FCN_atand.cpp FCN_atand.h \
	  FCN_atanh.cpp FCN_atanh.h \
	  FCN_bei.cpp FCN_bei.h \
	  FCN_ber.cpp FCN_ber.h \
	  FCN_besi0.cpp FCN_besi0.h \
	  FCN_besi1.cpp FCN_besi1.h \
	  FCN_besj0.cpp FCN_besj0.h \
	  FCN_besj1.cpp FCN_besj1.h \
	  FCN_besk0.cpp FCN_besk0.h \
	  FCN_besk1.cpp FCN_besk1.h \
	  FCN_besy0.cpp FCN_besy0.h \
	  FCN_besy1.cpp FCN_besy1.h \
	  FCN_beta.cpp FCN_beta.h \
	  FCN_betain.cpp FCN_betain.h \
	  FCN_binom.cpp FCN_binom.h \
	  FCN_biry.cpp FCN_biry.h \
	  FCN_bivarnor.cpp FCN_bivarnor.h \
	  FCN_bivinterp.cpp FCN_bivinterp.h \
	  FCN_bivsmooth.cpp FCN_bivsmooth.h \
	  FCN_canopen.cpp FCN_canopen.h \
	  FCN_char.cpp FCN_char.h \
	  FCN_cheby.cpp FCN_cheby.h \
	  FCN_chisq.cpp FCN_chisq.h \
	  FCN_chisqi.cpp FCN_chisqi.h \
	  FCN_chlogu.cpp FCN_chlogu.h \
	  FCN_clebsg.cpp FCN_clebsg.h \
	  FCN_clen.cpp FCN_clen.h \
	  FCN_convolute.cpp FCN_convolute.h \
	  FCN_cos.cpp FCN_cos.h \
	  FCN_cosd.cpp FCN_cosd.h \
	  FCN_cosh.cpp FCN_cosh.h \
	  FCN_cosint.cpp FCN_cosint.h \
	  FCN_cot.cpp FCN_cot.h \
	  FCN_cotd.cpp FCN_cotd.h \
	  FCN_coth.cpp FCN_coth.h \
	  FCN_csc.cpp FCN_csc.h \
	  FCN_cscd.cpp FCN_cscd.h \
	  FCN_csch.cpp FCN_csch.h \
	  FCN_date.cpp FCN_date.h \
	  FCN_dawson.cpp FCN_dawson.h \
	  FCN_deconvolute.cpp FCN_deconvolute.h \
	  FCN_deriv.cpp FCN_deriv.h \
	  FCN_det.cpp FCN_det.h \
	  FCN_digamma.cpp FCN_digamma.h \
	  FCN_dilog.cpp FCN_dilog.h \
	  FCN_ei.cpp FCN_ei.h \
	  FCN_eigen.cpp FCN_eigen.h \
	  FCN_einellic.cpp FCN_einellic.h \
	  FCN_ellice.cpp FCN_ellice.h \
	  FCN_ellick.cpp FCN_ellick.h \
	  FCN_eqs.cpp FCN_eqs.h \
	  FCN_erfc.cpp FCN_erfc.h \
	  FCN_erf.cpp FCN_erf.h \
	  FCN_evaluate.cpp FCN_evaluate.h \
	  FCN_exist.cpp FCN_exist.h \
	  FCN_expand.cpp FCN_expand.h \
	  FCN_exp.cpp FCN_exp.h \
	  FCN_expint.cpp FCN_expint.h \
	  FCN_expn.cpp FCN_expn.h \
	  FCN_factorial.cpp FCN_factorial.h \
	  FCN_ferdirac.cpp FCN_ferdirac.h \
	  FCN_fft.cpp FCN_fft.h \
	  FCN_finellic.cpp FCN_finellic.h \
	  FCN_fisher.cpp FCN_fisher.h \
	  FCN_fold.cpp FCN_fold.h \
	  FCN_frec1.cpp FCN_frec1.h \
	  FCN_frec2.cpp FCN_frec2.h \
	  FCN_fres1.cpp FCN_fres1.h \
	  FCN_fres2.cpp FCN_fres2.h \
	  FCN_gammacin.cpp FCN_gammacin.h \
	  FCN_gamma.cpp FCN_gamma.h \
	  FCN_gammain.cpp FCN_gammain.h \
	  FCN_gammatin.cpp FCN_gammatin.h \
	  FCN_gammln.cpp FCN_gammln.h \
	  FCN_gammq.cpp FCN_gammq.h \
	  FCN_gauss.cpp FCN_gauss.h \
	  FCN_gaussin.cpp FCN_gaussin.h \
	  FCN_gaussj.cpp FCN_gaussj.h \
	  FCN_gmean.cpp FCN_gmean.h \
	  FCN_heaviside.cpp FCN_heaviside.h \
	  FCN_hermite.cpp FCN_hermite.h \
	  FCN_hypgeo.cpp FCN_hypgeo.h \
	  FCN_ichar.cpp FCN_ichar.h \
	  FCN_iclose.cpp FCN_iclose.h \
	  FCN_identity.cpp FCN_identity.h \
	  FCN_iequal.cpp FCN_iequal.h \
	  FCN_ifft.cpp FCN_ifft.h \
	  FCN_imax.cpp FCN_imax.h \
	  FCN_imin.cpp FCN_imin.h \
	  FCN_index.cpp FCN_index.h \
	  FCN_int.cpp FCN_int.h \
	  FCN_integral.cpp FCN_integral.h \
	  FCN_interpolate.cpp FCN_interpolate.h \
	  FCN_inverse.cpp FCN_inverse.h \
	  FCN_jacobi.cpp FCN_jacobi.h \
	  FCN_jahnuf.cpp FCN_jahnuf.h \
	  FCN_join.cpp FCN_join.h \
	  FCN_kei.cpp FCN_kei.h \
	  FCN_ker.cpp FCN_ker.h \
	  FCN_kurt.cpp FCN_kurt.h \
	  FCN_laguerre.cpp FCN_laguerre.h \
	  FCN_lcase.cpp FCN_lcase.h \
	  FCN_legendre.cpp FCN_legendre.h \
	  FCN_len.cpp FCN_len.h \
	  FCN_lnagamma.cpp FCN_lnagamma.h \
	  FCN_lnbeta.cpp FCN_lnbeta.h \
	  FCN_ln.cpp FCN_ln.h \
	  FCN_log10.cpp FCN_log10.h \
	  FCN_logam.cpp FCN_logam.h \
	  FCN_log.cpp FCN_log.h \
	  FCN_max.cpp FCN_max.h \
	  FCN_mean.cpp FCN_mean.h \
	  FCN_median.cpp FCN_median.h \
	  FCN_min.cpp FCN_min.h \
	  FCN_mod.cpp FCN_mod.h \
	  FCN_nes.cpp FCN_nes.h \
	  FCN_nint.cpp FCN_nint.h \
	  FCN_normal.cpp FCN_normal.h \
	  FCN_null.cpp FCN_null.h \
	  FCN_pdiff.cpp FCN_pdiff.h \
	  FCN_pfactors.cpp FCN_pfactors.h \
	  FCN_plmn.cpp FCN_plmn.h \
	  FCN_plmu.cpp FCN_plmu.h \
	  FCN_poica.cpp FCN_poica.h \
	  FCN_poisson.cpp FCN_poisson.h \
	  FCN_prob.cpp FCN_prob.h \
	  FCN_prod.cpp FCN_prod.h \
	  FCN_psi.cpp FCN_psi.h \
	  FCN_racah.cpp FCN_racah.h \
	  FCN_radmac.cpp FCN_radmac.h \
	  FCN_rchar.cpp FCN_rchar.h \
	  FCN_rms.cpp FCN_rms.h \
	  FCN_roll.cpp FCN_roll.h \
	  FCN_rprod.cpp FCN_rprod.h \
	  FCN_rsum.cpp FCN_rsum.h \
	  FCN_savgol.cpp FCN_savgol.h \
	  FCN_sec.cpp FCN_sec.h \
	  FCN_secd.cpp FCN_secd.h \
	  FCN_sech.cpp FCN_sech.h \
	  FCN_sign.cpp FCN_sign.h \
	  FCN_simpleran.cpp FCN_simpleran.h \
	  FCN_sin.cpp FCN_sin.h \
	  FCN_sind.cpp FCN_sind.h \
	  FCN_sinh.cpp FCN_sinh.h \
	  FCN_skew.cpp FCN_skew.h \
	  FCN_sinint.cpp FCN_sinint.h \
	  FCN_smooth.cpp FCN_smooth.h \
	  FCN_splinterp.cpp FCN_splinterp.h \
	  FCN_splsmooth.cpp FCN_splsmooth.h \
	  FCN_sqrt.cpp FCN_sqrt.h \
	  FCN_stdev.cpp FCN_stdev.h \
	  FCN_step.cpp FCN_step.h \
	  FCN_string.cpp FCN_string.h \
	  FCN_struve0.cpp FCN_struve0.h \
	  FCN_struve1.cpp FCN_struve1.h \
	  FCN_student.cpp FCN_student.h \
	  FCN_studenti.cpp FCN_studenti.h \
	  FCN_sub.cpp FCN_sub.h \
	  FCN_sum.cpp FCN_sum.h \
	  FCN_sup.cpp FCN_sup.h \
	  FCN_tan.cpp FCN_tan.h \
	  FCN_tand.cpp FCN_tand.h \
	  FCN_tanh.cpp FCN_tanh.h \
	  FCN_tcase.cpp FCN_tcase.h \
	  FCN_time.cpp FCN_time.h \
	  FCN_tina.cpp FCN_tina.h \
	  FCN_ucase.cpp FCN_ucase.h \
	  FCN_var.cpp FCN_var.h \
	  FCN_varname.cpp FCN_varname.h \
	  FCN_vartype.cpp FCN_vartype.h \
	  FCN_vlen.cpp FCN_vlen.h \
	  FCN_voigt.cpp FCN_voigt.h \
	  FCN_volume.cpp FCN_volume.h \
	  FCN_walsh.cpp FCN_walsh.h \
	  FCN_where.cpp FCN_where.h \
	  FCN_wign3j.cpp FCN_wign3j.h \
	  FCN_wign6j.cpp FCN_wign6j.h \
	  FCN_wign9j.cpp FCN_wign9j.h \
	  FCN_wrap.cpp FCN_wrap.h \
	  FunctionDefinition.cpp FunctionDefinition.h \
	  FunctionTable.cpp FunctionTable.h \
	  ScalarFunction.cpp ScalarFunction.h \
          ArrayFunction.h
