# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AM_CPPFLAGS = $(EX_CXXFLAGS) $(WX_CXXFLAGS) $(MUD_CXXFLAGS) $(MINUIT_CXXFLAGS)

noinst_LTLIBRARIES = libgraphics.la
libgraphics_la_SOURCES = \
	  GRA_angleCharacteristic.cpp GRA_angleCharacteristic.h \
	  GRA_arrow1.cpp GRA_arrow1.h \
	  GRA_arrow2.cpp GRA_arrow2.h \
	  GRA_arrow3.cpp GRA_arrow3.h \
	  GRA_asterisk.cpp GRA_asterisk.h \
	  GRA_axis.cpp GRA_axis.h \
	  GRA_bitmap.cpp GRA_bitmap.h \
	  GRA_boolCharacteristic.cpp GRA_boolCharacteristic.h \
	  GRA_boxPlot.cpp GRA_boxPlot.h \
	  GRA_cartesianAxes.cpp GRA_cartesianAxes.h \
	  GRA_cartesianCurve.cpp GRA_cartesianCurve.h \
	  GRA_colorCharacteristic.cpp GRA_colorCharacteristic.h \
	  GRA_colorControl.cpp GRA_colorControl.h \
	  GRA_color.cpp GRA_color.h \
	  GRA_colorMap.cpp GRA_colorMap.h \
	  GRA_contourLine.cpp GRA_contourLine.h \
	  GRA_cross.cpp GRA_cross.h \
	  GRA_crossPlus.cpp GRA_crossPlus.h \
	  GRA_densityPlot.cpp GRA_densityPlot.h \
	  GRA_diamond.cpp GRA_diamond.h \
	  GRA_diamondPlus.cpp GRA_diamondPlus.h \
	  GRA_diffusionPlot.cpp GRA_diffusionPlot.h \
	  GRA_distanceCharacteristic.cpp GRA_distanceCharacteristic.h \
	  GRA_ditheringPlot.cpp GRA_ditheringPlot.h \
	  GRA_doubleCharacteristic.cpp GRA_doubleCharacteristic.h \
	  GRA_drawableObject.cpp GRA_drawableObject.h \
	  GRA_drawableText.cpp GRA_drawableText.h \
	  GRA_ellipse.cpp GRA_ellipse.h \
	  GRA_errorBar.cpp GRA_errorBar.h \
	  GRA_fontCharacteristic.cpp GRA_fontCharacteristic.h \
	  GRA_fontControl.cpp GRA_fontControl.h \
	  GRA_font.cpp GRA_font.h \
	  GRA_gradientPlot.cpp GRA_gradientPlot.h \
	  GRA_intCharacteristic.cpp GRA_intCharacteristic.h \
	  GRA_legend.cpp GRA_legend.h \
	  GRA_multiLineFigure.cpp GRA_multiLineFigure.h \
	  GRA_plotSymbol.cpp GRA_plotSymbol.h \
	  GRA_plus.cpp GRA_plus.h \
	  GRA_point.cpp GRA_point.h \
	  GRA_polarAxes.cpp GRA_polarAxes.h \
	  GRA_polarCurve.cpp GRA_polarCurve.h \
	  GRA_polygon.cpp GRA_polygon.h \
	  GRA_polyline.cpp GRA_polyline.h \
	  GRA_postscript.cpp GRA_postscript.h \
	  GRA_rectangle.cpp GRA_rectangle.h \
	  GRA_setOfCharacteristics.cpp GRA_setOfCharacteristics.h \
	  GRA_simpleText.cpp GRA_simpleText.h \
	  GRA_sizeCharacteristic.cpp GRA_sizeCharacteristic.h \
	  GRA_star5pt.cpp GRA_star5pt.h \
	  GRA_stringCharacteristic.cpp GRA_stringCharacteristic.h \
	  GRA_thiessenTriangulation.cpp GRA_thiessenTriangulation.h \
	  GRA_threeDPlot.cpp GRA_threeDPlot.h \
	  GRA_triangle.cpp GRA_triangle.h \
	  GRA_window.cpp GRA_window.h \
	  GRA_wxWidgets.cpp GRA_wxWidgets.h \
          GRA_characteristic.h EGraphicsError.h GRA_shape.h
