# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AM_CPPFLAGS = $(EX_CXXFLAGS) $(WX_CXXFLAGS) $(MUD_CXXFLAGS) $(MINUIT_CXXFLAGS)

noinst_LTLIBRARIES = liboperators.la
liboperators_la_SOURCES = \
	  OperatorTable.cpp OperatorTable.h \
	  OperatorDefinition.cpp OperatorDefinition.h \
	  ScalarOperator.cpp ScalarOperator.h \
	  OPR_and.cpp OPR_and.h \
	  OPR_concatenation.cpp OPR_concatenation.h \
	  OPR_divide.cpp OPR_divide.h \
	  OPR_equals.cpp OPR_equals.h \
	  OPR_exclusiveOr.cpp OPR_exclusiveOr.h \
	  OPR_exponentiation2.cpp OPR_exponentiation2.h \
	  OPR_exponentiation.cpp OPR_exponentiation.h \
	  OPR_ge.cpp OPR_ge.h \
	  OPR_gt.cpp OPR_gt.h \
	  OPR_innerProduct.cpp OPR_innerProduct.h \
	  OPR_intersection.cpp OPR_intersection.h \
	  OPR_le.cpp OPR_le.h \
	  OPR_lt.cpp OPR_lt.h \
	  OPR_minus.cpp OPR_minus.h \
	  OPR_multiply.cpp OPR_multiply.h \
	  OPR_ne.cpp OPR_ne.h \
	  OPR_not.cpp OPR_not.h \
	  OPR_or.cpp OPR_or.h \
	  OPR_outerProduct.cpp OPR_outerProduct.h \
	  OPR_plus.cpp OPR_plus.h \
	  OPR_reflect.cpp OPR_reflect.h \
	  OPR_transpose.cpp OPR_transpose.h \
	  OPR_union.cpp OPR_union.h \
          ArrayOperator.h
