# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LTLIBRARIES = libvariables.la
libvariables_la_SOURCES = NumericData.cpp NumericData.h \
                          NumericVariable.cpp NumericVariable.h \
                          NVariableTable.cpp NVariableTable.h \
                          TextData.cpp TextData.h \
                          TextVariable.cpp TextVariable.h \
                          TVariableTable.cpp TVariableTable.h \
                          Variable.cpp Variable.h \
                          EVariableError.h
