# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AM_CPPFLAGS = $(EX_CXXFLAGS) $(WX_CXXFLAGS) $(MUD_CXXFLAGS) $(MINUIT_CXXFLAGS)

noinst_LTLIBRARIES = libwxforms.la
libwxforms_la_SOURCES = \
	  AnalysisCommandPanel.cpp AnalysisCommandPanel.h \
	  AnalysisMessagePanel.cpp AnalysisMessagePanel.h \
	  AnalysisSpeedButtonPanel.cpp AnalysisSpeedButtonPanel.h \
	  AnalysisWindow.cpp AnalysisWindow.h \
          CommandTextCtrl.cpp CommandTextCtrl.h \
	  ExecuteDialog.cpp ExecuteDialog.h \
	  VisualizationSpeedButtonPanel.cpp VisualizationSpeedButtonPanel.h \
	  VisualizationWindow.cpp VisualizationWindow.h \
	  InquireYNDialog.cpp InquireYNDialog.h \
	  InquireDialog.cpp InquireDialog.h \
	  ReadVectorsForm.cpp ReadVectorsForm.h \
	  ReadScalarsForm.cpp ReadScalarsForm.h \
	  ReadMatrixForm.cpp ReadMatrixForm.h \
	  ReadTextForm.cpp ReadTextForm.h \
	  WriteVectorsForm.cpp WriteVectorsForm.h \
	  WriteScalarsForm.cpp WriteScalarsForm.h \
	  WriteMatrixForm.cpp WriteMatrixForm.h \
	  WriteTextForm.cpp WriteTextForm.h \
	  ChooseFilePanel.cpp ChooseFilePanel.h \
          ShowVariablesForm.cpp ShowVariablesForm.h \
          VarInfoForm.cpp VarInfoForm.h \
          GenerateVectorForm.cpp GenerateVectorForm.h \
          FitForm.cpp FitForm.h \
          GraphForm.cpp GraphForm.h \
          TextForm.cpp TextForm.h \
          FontChooser.cpp FontChooser.h \
	  StackDialog.cpp StackDialog.h \
	  HintForm.cpp HintForm.h \
	  PeakFindForm.cpp PeakFindForm.h \
	  GraphicsPage.cpp GraphicsPage.h \
	  SetAspectRatioForm.cpp SetAspectRatioForm.h
