# Copyright (C) 2006 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AM_CPPFLAGS = $(EX_CXXFLAGS) $(WX_CXXFLAGS) $(MUD_CXXFLAGS) $(MINUIT_CXXFLAGS)

noinst_LTLIBRARIES = libwxforms.la
libwxforms_la_SOURCES = \
	  AnalysisCommandPanel.cpp AnalysisCommandPanel.h \
	  AnalysisMessagePanel.cpp AnalysisMessagePanel.h \
	  AnalysisSpeedButtonPanel.cpp AnalysisSpeedButtonPanel.h \
	  AnalysisWindow.cpp AnalysisWindow.h \
          AxisPopup.cpp AxisPopup.h \
          BasicColors.cpp BasicColors.h \
	  ChooseFilePanel.cpp ChooseFilePanel.h \
          CommandTextCtrl.cpp CommandTextCtrl.h \
	  ExecuteDialog.cpp ExecuteDialog.h \
          CurvePopup.cpp CurvePopup.h \
          FitForm.cpp FitForm.h \
          FontChooser.cpp FontChooser.h \
          GenerateVectorForm.cpp GenerateVectorForm.h \
          GraphForm.cpp GraphForm.h \
	  GraphicsPage.cpp GraphicsPage.h \
	  HintForm.cpp HintForm.h \
	  InquireYNDialog.cpp InquireYNDialog.h \
	  InquireDialog.cpp InquireDialog.h \
	  PeakFindForm.cpp PeakFindForm.h \
	  ReadVectorsForm.cpp ReadVectorsForm.h \
	  ReadScalarsForm.cpp ReadScalarsForm.h \
	  ReadMatrixForm.cpp ReadMatrixForm.h \
	  ReadTextForm.cpp ReadTextForm.h \
	  SetAspectRatioForm.cpp SetAspectRatioForm.h \
          ShowVariablesForm.cpp ShowVariablesForm.h \
	  StackDialog.cpp StackDialog.h \
          TextForm.cpp TextForm.h \
          VarInfoForm.cpp VarInfoForm.h \
	  VisualizationSpeedButtonPanel.cpp VisualizationSpeedButtonPanel.h \
	  VisualizationWindow.cpp VisualizationWindow.h \
	  WriteVectorsForm.cpp WriteVectorsForm.h \
	  WriteScalarsForm.cpp WriteScalarsForm.h \
	  WriteMatrixForm.cpp WriteMatrixForm.h \
	  WriteTextForm.cpp WriteTextForm.h
